<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InicioTrivia">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#8D00BCD4">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/design_default_color_primary_dark"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:text="@string/navBar"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="117dp"
            android:paddingLeft="20dp"
            android:paddingTop="30dp"
            android:paddingRight="20dp"
            android:text="@string/bienvenida"
            android:textAlignment="textStart"
            android:textColor="@color/design_default_color_primary_variant"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/nombre"
            android:layout_width="249dp"
            android:layout_height="66dp"
            android:layout_marginTop="72dp"
            android:ems="10"
            android:hint="@string/nombre"
            android:inputType="text"
            android:paddingTop="30dp"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <Button
            android:id="@+id/btnComenzar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnComenza"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/nombre"
            app:layout_constraintStart_toStartOf="@+id/nombre"
            app:layout_constraintTop_toBottomOf="@+id/nombre" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>